# ChangeLog for catalyst
# Copyright 1999-2009 Gentoo Foundation; 2008-2009 Various authors (see AUTHORS)
# Distributed under the GPL v2

  28 Jun 2009; Andrew Gaffney <agaffney@gentoo.org> files/livecd/README.txt,
  files/livecd/x86-F6.msg:
  Apply patch to document espeakup support for gentoo bug #267708

  07 Apr 2009; Andrew Gaffney <agaffney@gentoo.org> catalyst,
  modules/catalyst/config.py:
  Get rid of addlargs in the main script Initial basics for multiple target
  support Move targetmap into global config object

  07 Apr 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/target/stage1.py:
  Clean up cleanables

  05 Apr 2009; Andrew Gaffney <agaffney@gentoo.org> TODO:
  Note in TODO where things have already been done

  04 Apr 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/config.py:
  Explicitly set target: in per-target spec values

  04 Apr 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/arch/arm.py:
  Apply additional patch from gentoo bug #255793 for arm subarches

  04 Apr 2009; Andrew Gaffney <agaffney@gentoo.org>
  targets/support/chroot-functions.sh:
  Apply patch from gentoo bug #264457 to prevent deleting of ccache cache

  24 Feb 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/arch/sh.py:
  Additional sh patch from gentoo bug #255793

  21 Feb 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/arch/arm.py, modules/catalyst/arch/sh.py:
  Apply modified patch from gentoo bug #255793 for enhanced sh/arm support

  30 Jan 2009; Andrew Gaffney <agaffney@gentoo.org> TODO:
  Add note to TODO about enhanced catalystrc support

  21 Jan 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/target/generic_stage.py:
  Update reference to make.conf.example for new location in portage-2.1.6

  20 Jan 2009; Andrew Gaffney <agaffney@gentoo.org>
  targets/stage1/stage1-chroot.sh:
  Remove --noreplace from run_merge call so that baselayout gets rebuilt
  with USE=build
