@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; 2008-2009 Various authors (see AUTHORS)
 # Distributed under the GPL v2
 
+  23 Aug 2009; Andrew Gaffney <agaffney@gentoo.org>
+  modules/catalyst/target/livecd_stage2.py:
+  Apply patch for module blacklisting from gentoo bug #282148
+
   28 Jun 2009; Andrew Gaffney <agaffney@gentoo.org> files/livecd/README.txt,
   files/livecd/x86-F6.msg:
   Apply patch to document espeakup support for gentoo bug #267708
